# lexigon

./: .gitignore  LICENSE  pyproject.toml
src/lexigon/: __main__.py  game.py  ui.py
